# gol.hs

./: .gitignore  GameOfLife.hs  Makefile  README.md  gol.cabal
src/: GameOfLife.hs
src/GameOfLife/: Game.hs  Parser.hs  Patterns.hs  Profile.hs  UI.hs  Utils.hs  World.hs
