name:                gol
version:             0.1.0.0
homepage:            https://github.com/dasch/gol
license:             MIT
license-file:        LICENSE
author:              Daniel Schierbeck
maintainer:          daniel.schierbeck@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.8

executable gol
  build-depends:       base ==4.5.*, containers
  main-is:             GameOfLife/Game.hs
  hs-source-dirs:      src

executable gol-profile
  build-depends:       base ==4.5.*, containers
  main-is:             GameOfLife/Profile.hs
  hs-source-dirs:      src
